# sige

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  example.ipynb  example.py  setup.py
assets/: mask.npy
diffusion/: README.md  ddim.ipynb  ddpm.ipynb  download_dataset.py  download_helper.py  get_metric.py  html_visualize.py  progressive_distillation.ipynb  runner.py  test.py  utils.py
diffusion/configs/: church_ddim256-original.yml  church_ddim256-sige.yml  church_ddpm256-original.yml  church_ddpm256-sige.yml  church_dpmsolver256-original.yml  church_dpmsolver256-sige.yml  church_pd128-original.yml  church_pd128-sige.yml  church_pd256-original.yml  church_pd256-sige.yml
diffusion/datasets/: __init__.py  sdedit_dataset.py
diffusion/metrics/: fid_score.py  lpips_score.py  psnr_score.py
diffusion/models/: common.py  ema.py
diffusion/samplers/: base_sampler.py  ddim_ddpm_sampler.py  ddim_sampler.py  ddpm_sampler.py  dpm_solver_sampler.py  pd_sampler.py
diffusion_demo/: README.md  download_helper.py  runner.py  start.py  utils.py
diffusion_demo/configs/: church_dpmsolver256-original.yml  church_dpmsolver256-sige.yml
diffusion_demo/samplers/: base_sampler.py  ddim_ddpm_sampler.py  ddim_sampler.py  ddpm_sampler.py  dpm_solver_sampler.py
diffusion_demo/ui/: canvas.py  (+6 more)
gaugan/: README.md  cityscapes_dataset.py  colorize.py  download_dataset.py  download_helper.py  gaugan.ipynb  get_metric.py  runner.py  test.py  utils.py
sige/: __init__.py  __version__.py  common.cpp  utils.py
stable-diffusion/: README.md  environment.yaml  run.py  utils.py
(+87 files in other folders)
